changed db to an inmemory because of server complications. Changed RestAPI

--- a/facade/src/main/resources/application.properties
+++ b/facade/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=veveDB
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa
-spring.datasource.password=sa
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+# JPA
 spring.jpa.show-sql=false
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=create
