--- a/facade/src/main/resources/application.properties
+++ b/facade/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.hibernate.ddl-auto=create
 veve.statements.organisation.iban=DE89 3704 0044 0532 0130 00
 veve.statements.fee.small=5.00
 veve.statements.fee.big=10.00
+# Logging
+logging.file:veve.log
