--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <properties>
         <java.version>1.8</java.version>
         <log4j2.version>2.11.1</log4j2.version>
+        <org.mockito.version>1.10.19</org.mockito.version>
     </properties>
 
     <dependencyManagement>
@@ -62,6 +63,13 @@
                 <version>${log4j2.version}</version>
             </dependency>
 
+            <!--TEST-->
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>
+                <version>${org.mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
